# tedana

./: .all-contributorsrc  .codecov.yml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGES.rst  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Code_of_Conduct.md  DECISION-MAKING.md  Dockerfile  Dockerfile_dev  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TestingTools.py  TestingUpdate.ipynb  circle.yml  codecov.yml  contributions.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml  tedana_outputs.txt  tedana_outputs_verbose.txt
.github/: dependabot.yml  issue_bug_template.md  issue_discussion_template.md  pull_request_template.md  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-issue  bug-issue.md  bug_issue.md  config.yml  discussion-issue.md  discussion_issue.md  issue_template.md
.github/workflows/: populate-projects.yml  python-publish.yml  tox.yml  uv-lock.yml
.pytest_cache/v/cache/: lastfailed  nodeids
binder/: ._NIH_5_echo  optimal_combination_workflow_plots.ipynb  requirements.txt
dev_tools/: build_docker.sh  get_data.sh  local_testing.sh  pca_check.py  run_tests.sh
dev_tools/envs/: py35_env.yml  py36_env.yml  py37_env.yml
docs/: GIFT.ipynb  Makefile  acquisition.rst  api.rst  approach.rst  building decision trees.rst  building_decision_trees.rst  classification_output_descriptions.rst  conf.py  considerations.rst  contributing.rst  denoising.rst  dependence_metrics.rst  developing.rst  faq.rst  fetching.rst  governance.rst  included_decision_trees.rst  index.rst  installation.rst  introduction.rst  make.bat  multi-echo.rst  multi-echo_walkthrough.rst  output_file_descriptions.rst  outputs.rst  pipelines.rst  publications.rst  references.bib  reporting.rst  resources.rst  roadmap.rst  support.rst  usage.rst  zenodo.js
docs/_static/: decision_tree_demo_external_regressors_motion_task_models.tex  decision_tree_demo_external_regressors_single_model.tex  decision_tree_kundu.tex  decision_tree_legend.tex  decision_tree_meica.tex  decision_tree_minimal.tex  decision_tree_tedana_orig.tex  decision_tree_tedana_v0.013.tex  optimal_combination_workflow_plots.ipynb  plot_approach_figures.ipynb  plot_decay_timeseries.ipynb  plot_metric_simulations.ipynb  plot_optcom.ipynb  tedana_plot_decay.ipynb  tedana_workflow_plots.ipynb  theme_overrides.css
docs/_templates/: class.rst  function.rst
docs/data/: GIFT_mask.nii
docs/notebooks/: plot_approach_figures.ipynb  plot_metric_simulations.ipynb
docs/source/: meica.rst  meica.tests.rst  modules.rst
docs/sphinxext/: __init__.py  github_link.py
docs/superpowers/plans/: 2026-05-15-internal-seconds.md  2026-05-15-interpolate-failing-voxels.md  2026-05-16-t2star-to-r2star.md  2026-05-25-max-rp-corr-external-regressors.md  2026-06-23-t2smap-complex-nlls.md
docs/superpowers/specs/: 2026-05-15-internal-seconds-design.md  2026-05-15-interpolate-failing-voxels-design.md  (+3 more)
examples/: optimal_combination_worflow_plots.ipynb  plot_approach_figures.ipynb  plot_metric_simulations.ipynb  plot_signal_decay_maps.ipynb  plot_t2star_fluctuations.ipynb
paper/: paper.bib  paper.md
report_template/: components.html  report.html
tedana/: __about__.py  __init__.py  _version.py  bibtex.py  combine.py  config.py  constants.py  decay.py  docs.py  due.py  gscontrol.py  info.py  io.py  metadata.py  quantitative.py  rica.py  stats.py  utils.py  viz.py
tedana/cli/: run.py  run_t2smap.py  run_tedana.py
tedana/config/: img_table.json  json_table.json
tedana/datasets/: __init__.py  fetchers.py  func.py  utils.py
tedana/decomp/: __init__.py  eigendecomp.py
tedana/decomposition/: __init__.py  _utils.py  eigendecomp.py  gift.py  gift_pca.py  godecomp.py  ica.py  ma_pca.py  pca.py
tedana/interfaces/: __init__.py  data.py  model.py  t2smap.py  tedana.py
tedana/io/: __init__.py  input_data.py  output_data.py
tedana/metrics/: __init__.py  _utils.py  artifact.py  collect.py  dependence.py  external.py  external_regressor_fits.py  frequency.py  kundu_fit.py  metrics.py  pseudocode_oop.txt  spatial.py  temporal.py
tedana/model/: __init__.py  combine.py  fit.py  monoexponential.py  t2smap.py
tedana/reporting/: KappaRho_DynPlot.py  __init__.py  _palette.py  dynamic_figures.py  html_report.py  quality_metrics.py  static_figures.py
tedana/reporting/data/: README.md  (+2 more)
tedana/resources/: references.bib
tedana/select/: select_comps.py
tedana/selection/: ComponentSelector.py  __init__.py  _utils.py  component_selector.py  decision_tree_ancillary.py  decision_tree_class.py  decision_trees.py  minimal_decision_tree1.json  select_comps.py  selection_nodes.py  selection_utils.py  sketching_out_vague_class_idea.py  tedica.py  tedpca.py
tedana/tests/: __init__.py  conftest.py  test_ComponentSelector.py  test_bibtex.py  test_combine.py  test_component_selector.py  test_datasets.py  test_decay.py  test_decomposition_tedpca.py  test_decomposition_utils.py  test_external_metrics.py  test_gscontrol.py  test_integration.py  test_integration_five_echo.py  test_integration_three_echo.py  test_integrity_robustica.py  test_io.py  test_mapca.py  test_metadata.py  test_metrics.py  test_metrics_artifact.py  test_metrics_collect.py  test_metrics_dependence.py  test_metrics_frequency.py  test_metrics_utils.py  test_model_combine.py  test_model_fit.py  test_model_fit_computefeats2.py  test_model_fit_dependence_metrics.py  test_model_fit_fitmodels_direct.py  test_model_fit_get_coeffs.py  test_model_fit_gscontrol_raw.py  test_model_fit_kundu_metrics.py  test_model_kundu_metrics.py  test_model_monoexponential.py  test_reporting.py  test_reporting_palette.py  test_rica.py  test_selection.py  test_selection_nodes.py  (+11 more)
tedana/utils/: __init__.py  io.py  masking.py  utils.py
tedana/workflows/: __init__.py  denoise_echoes.py  ica_reclassify.py  parser_utils.py  pipeline_context.py  pipeline_stages.py  post_aroma.py  post_melodicview.py  post_taskcorr.py  t2smap.py  taskcorr.py  tedana.py  tedana_reclassify.py
(+87 files in other folders)
