[metadata]
url = https://github.com/ME-ICA/tedana
license = LGPL 2.1
author = tedana developers
author_email = emd222@cornell.edu
maintainer = Elizabeth DuPre
maintainer_email = emd222@cornell.edu
description = TE-Dependent Analysis (tedana) of multi-echo functional magnetic resonance imaging (fMRI) data.
description-file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.6
install_requires =
    bokeh<2.3.0
    mapca>=0.0.3
    matplotlib
    nibabel>=2.5.1
    nilearn>=0.7
    numpy>=1.16
    pandas>=0.24
    scikit-learn>=0.21
    scipy>=1.2.0
    threadpoolctl
    jinja2==3.0.1
packages = find:
include_package_data = False

[options.extras_require]
doc =
    sphinx>=1.5.3
    sphinx_copybutton
    sphinx_rtd_theme
    sphinx-argparse
    sphinxcontrib-bibtex
tests =
    codecov
    coverage<5.0
    flake8>=3.7
    flake8-black
    flake8-isort
    pytest
    pytest-cov
    requests
all =
    %(doc)s
    %(tests)s

[options.entry_points]
console_scripts =
    t2smap = tedana.workflows.t2smap:_main
    tedana = tedana.workflows.tedana:_main

[options.package_data]
* =
    resources/config/*
    reporting/data/*
    reporting/data/html/*

[versioneer]
VCS = git
style = pep440
versionfile_source = tedana/_version.py
versionfile_build = tedana/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude=*build/
ignore = E203,E402,W503
per-file-ignores =
    */__init__.py:F401
docstring-convention = numpy

[tool:pytest]
log_cli = true
